gitops/infrastructure/weave-gitops/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-gateway-weave-gitops
  namespace: flux-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: weave-gitops
  policyTypes:
    - Ingress
  ingress:
    - {}
